--- a/trabalho1.html
+++ b/trabalho1.html
@@ -1,1 +1,229 @@
+Filtros de spam melhores … Agora o Drive move automaticamente para a pasta de spam os arquivos suspeitos compartilhados com você. Também é possível denunciar um arquivo como spam manualmente.Saiba mais
+cadado.html
+<!DOCTYPE html>
+<html>
+<head>
+<title>site joao</title>
+<style>
+    body {
+        background-color: rgb(33, 31, 142);
+        margin: 0;
+        padding: 0;
+        height: 100%;
+    }
 
+    header {
+        text-align: center;
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        border-bottom: 4px solid rgb(255, 255, 255);
+        z-index: 2;
+        position: relative;
+    }
+
+    .um, .dois, .tres, .quatro {
+        text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: #000000;
+        margin: 0;
+        padding: 20px;
+        font-size: 1.5rem;
+        flex: 1;
+        border-right: 4px solid rgb(255, 255, 255);
+    }
+
+    .um {
+        background-color: rgb(255, 0, 0);
+    }
+
+    .dois {
+        background-color: rgb(255, 0, 0);
+    }
+
+    .tres {
+        background-color: rgb(255, 0, 0);
+    }
+
+    .quatro {
+        background-color: rgb(153, 0, 255);
+    }
+
+    .vertical-left, .vertical-right {
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        width: 5%;
+        margin: 0;
+        z-index: 1;
+    }
+
+    .vertical-left {
+        left: 0;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .vertical-right {
+        right: 0;
+        display: flex;
+        flex-direction: column;
+        border-left: 4px solid rgb(0, 0, 0); /* Linha vertical à direita */
+    }
+
+    .vertical-left > div, .vertical-right > div {
+        text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: #000000;
+        margin: 0;
+        padding: 20px;
+        font-size: 1.5rem;
+        flex: 1;
+        border-bottom: 4px solid rgb(255, 255, 255);
+    }
+
+    .vertical-left .um {
+        background-color: rgb(255, 77, 0);
+    }
+
+    .vertical-left .dois {
+        background-color: rgb(157, 255, 0);
+    }
+
+    .vertical-left .tres {
+        background-color: rgb(123, 0, 255);
+    }
+
+    .vertical-right .um {
+        background-color: rgb(0, 255, 85);
+    }
+
+    .vertical-right .dois {
+        background-color: rgb(244, 169, 9);
+    }
+
+    footer {
+        display: flex;
+        justify-content: space-between;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        margin: 0;
+        border-top: 4px solid rgb(255, 255, 255);
+        background-color: rgb(0, 0, 0);
+        z-index: 2;
+    }
+
+    footer > div {
+        text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: #ddd;
+        margin: 0;
+        padding: 20px;
+        font-size: 1.5rem;
+        flex: 1;
+        border-right: 4px solid rgb(255, 255, 255);
+    }
+
+    footer .um {
+        background-color: rgba(203, 215, 64, 0.632);
+    }
+
+    footer .dois {
+        background-color: rgb(33, 81, 172);
+    }
+
+    footer .tres {
+        background-color: rgb(136, 69, 123);
+    }
+
+    .meio {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0; /* Ajustado para ocupar toda a tela */
+    }
+
+    .meio-superior {
+        display: flex;
+        width: 100%;
+        justify-content: space-between;
+        border-bottom: 4px solid rgb(255, 255, 255); /* Linha horizontal entre a parte superior e inferior */
+    }
+
+    .meio-inferior {
+        display: flex;
+        width: 100%;
+        justify-content: space-between;
+    }
+
+    .meio-superior > div, .meio-inferior > div {
+        text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: #ddd;
+        margin: 0;
+        padding: 200px;
+        font-size: 1.8rem;
+        flex: 1;
+        border-right: 4px solid rgb(255, 255, 255);
+    }
+
+    .meio-superior .um {
+        background-color: rgb(176, 77, 115);
+    }
+
+    .meio-superior .dois {
+        background-color: rgb(0, 255, 221);
+    }
+
+    .meio-inferior .um {
+        background-color: rgb(0, 255, 145);
+    }
+
+    .meio-inferior .dois {
+        background-color: rgb(144, 0, 255);
+    }
+
+    .meio-inferior .tres {
+        background-color: rgb(106, 255, 0);
+    }
+
+</style>
+</head>
+<body>
+    <div class="site">
+        <header>
+            <div class="tres"></div>
+            <div class="quatro"></div>
+        </header>
+        <div class="meio">
+            <div class="meio-superior">
+                <div class="um"></div>
+                <div class="dois"></div>
+            </div>
+        </div>
+        <footer>
+            <div class="um"></div>
+            <div class="tres"></div>
+        </footer>
+        <div class="vertical-left">
+            <div class="dois"></div>
+            <div class="tres"></div>
+        </div>
+        </div>
+    </div>
+</body>
+</html>
